2003-12-05  Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/po/ru.po: Update Russian translation for 0.98.
	* doc/gramps-manual/C/getstart.xml: More "open a directory" stuff. 
	* src/gramps.glade: Add Help button to opendb dialog.
	* src/DbPrompter.py (open_help_clicked): Add function.
	* src/PedView.py: Remove references to self.presel_descendants
	(closes bug #854626).

2003-12-04  Alex Roitman  <shura@alex.neuro.umn.edu>
	* doc/gramps-manual/C/getstart.xml: Remove ZODB support section. 
	* doc/gramps-manual/C/usage.xml: Remove ZODB support section.
	* TODO: Update.
	* gramps.desktop: Remove in favor of src/gramps.desktop file.
	* src/gramps_main.py: Replace stock Home with the custom string.
	* src/PeopleView.py: Replace stock Home with the custom string.

2003-12-03  Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/plugins/ReadGedcom.py (parse_source): Stop TEXT messing
	up the title; add ABBR to the note field (was ignored).
	* doc/gramps-manual/C/faq.xml: Link to referenced cites.    
	* doc/gramps-manual/C/usage.xml: Document the completeness flag.
	Describe new layout of book report.
	* doc/gramps-manual/C/mainwin.xml: Document children menu markup
	in Pedigree View.
	* NEWS: Minor corrections. 

2003-12-02  Don Allingham  <dallingham@users.sourceforge.net>
	* src/PeopleView.py (PeopleView.clear_person_tabs): initialize
	the model2page map with the default list, instead of clearing it.

2003-12-02  Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/gramps.desktop: Add russian strings. Set encoding line to UTF-8.
	* src/gramps_main.py (on_faq_activate): Switch Help->FAQ function 
        to displaying the manual's appendix in yelp.
	* src/gramps.glade: Remove FAQ window. 
	* doc/gramps-manual/C/cmdline.xml,
	doc/gramps-manual/C/gramps-manual.xml,
	doc/gramps-manual/C/custom.xml,
	doc/gramps-manual/C/keybind.xml,
	doc/gramps-manual/C/faq.xml,   
	doc/gramps-manual/C/legal.xml,
	doc/gramps-manual/C/filtref.xml,
	doc/gramps-manual/C/mainwin.xml,